lbdb (0.18.1) unstable; urgency=low

  * Always build Debian binary with m_pgp2, m_pgp5 and m_gpg (ignoring
    whether the different PGP binaries are installed).

 --

lbdb (0.18) unstable; urgency=low

  * Splited lbdb-fetchaddr.man off from lbdbq.man.
  * Moved lbdb-fetchaddr from $bindir to $libdir.
  * Added Fido module m_fido and nodelist2lbdb.
  * Get rid of "function" keyword in sh-scripts, which is a bashism.
    (Closes: #36851).

 -- Roland Rosenfeld <roland@debian.org>  Wed, 23 Jun 1999 18:22:53 +0200

lbdb (0.17.1) unstable; urgency=low

  * Upgraded autoconf from 2.12 to 2.13.
    Get rid of `echo $PATH | sed "s/:/ /g"` in AC_PATH_PROC() macro,
    because this isn't needed and doesn't work with autoconf 2.13.
  * Removed word boundary check in m_inmail, because this is only
    available in GNU grep.

 -- Roland Rosenfeld <roland@debian.org>  Tue, 25 May 1999 15:53:53 +0200

lbdb (0.17) unstable; urgency=low

  * Delay munging of mails when using lbdb-fetchaddr/m_inmail by adding a
    new script lbdb-munge, which is run by lbdbq and can be run by cron
    additionally. Thanks to Enrico Zini <zinie@cs.unibo.it> for the base
    idea of this.
  * Made lbdb-fetchaddr Y2K compliant by changing the date format which is 
    written to the 3rd column of m_inmail.list to "%Y-%m-%d %H:%M" (e.g.
    "1999-04-29 14:33").
  * Made date format in lbdb-fetchaddr runtime configurable as a command
    line parameter. If no date format is specified, "%Y-%m-%d %H:%M" is
    used as the default.
  * include getopt.h only if it is existing (using autoconf). 

 -- Roland Rosenfeld <roland@debian.org>  Wed,  7 Apr 1999 12:22:13 +0200

lbdb (0.16.2) unstable; urgency=low

  * Removed some bash, GNU-make, and GNU libc specials.

 -- Roland Rosenfeld <roland@debian.org>  Tue,  6 Apr 1999 19:11:24 +0200

lbdb (0.16.1) unstable; urgency=low

  * lbdb-fetchaddr: Create directory $HOME/.lbdb if it does not exist.
