@@ -2,6 +2,7 @@ lbdb (0.18.1) unstable; urgency=low
 
   * Always build Debian binary with m_pgp2, m_pgp5 and m_gpg (ignoring
     whether the different PGP binaries are installed).
+  * Merged in changes from Mutt's dotlock (CVS as of 1999-08-01).
 
  --
 
